# radiative-model-fitting

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: HWC_J1908_06.txt
examples/: fit_all_models.py
gamma_ray_model_fitting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: fitting.py  io.py  plotting.py  statistics.py
src/models/: factory.py  hadronic.py  leptonic.py
src/spectra/: particle_spectra.py
